k8s/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.benning.cloud
        - django.benning.cloud
      secretName: nginx-test
  rules:
    - host: nginx.benning.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: django.benning.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-k8s-web-service
                port:
                  number: 80
